python3.12 (3.12.0-2) UNRELEASED; urgency=medium

  [ Stefano Rivera ]
  * Add myself as an uploader.

  [ Matthias Klose ]
  * Fix some lintian warnings.

 -- Matthias Klose <doko@debian.org>  Fri, 06 Oct 2023 07:40:21 +0200

python3.12 (3.12.0-1) unstable; urgency=medium

  * Python 3.12.0 release.

 -- Matthias Klose <doko@debian.org>  Wed, 04 Oct 2023 08:27:34 +0200

python3.12 (3.12.0~rc2-1) unstable; urgency=medium

  * Python 3.12.0 release candidate 2.

 -- Matthias Klose <doko@debian.org>  Thu, 14 Sep 2023 06:33:29 +0200

python3.12 (3.12.0~rc1-2) unstable; urgency=medium

  * Update to the 3.12 branch 2023-08-29.
    - Add loongarch support. Addresses: #1049963.
    - Address CVE-2023-41105, CVE-2023-40217.
  * libpython3.12-stdlib: Depend on tzdata. Closes: #1050529.
  * Add proposed patch to avoid tzdata-legacy, and drop again the
    dependency on it. See  https://github.com/python/cpython/pull/108533.

 -- Matthias Klose <doko@debian.org>  Tue, 29 Aug 2023 17:33:03 +0200

python3.12 (3.12.0~rc1-1) unstable; urgency=medium

  * Python 3.12.0 release candidate 1.
  * Update symbols files.

 -- Matthias Klose <doko@debian.org>  Thu, 10 Aug 2023 06:02:50 +0200

python3.12 (3.12.0~b4-1) unstable; urgency=medium

  * Python 3.12.0 beta 3 snapshot.
  * libpython3.12-stdlib: Depend on tzdata. Addresses: #1037168.

 -- Matthias Klose <doko@debian.org>  Thu, 13 Jul 2023 16:24:02 +0200

python3.12 (3.12.0~b3-1) unstable; urgency=medium

  * Python 3.12.0 beta 3 snapshot.

 -- Matthias Klose <doko@debian.org>  Fri, 23 Jun 2023 17:06:58 +0200

python3.12 (3.12.0~b2-3) unstable; urgency=medium

  [ Matthias Klose ]
  * libpython3.12-testsuite: Don't install ctypes/test_macholib.
  * Add test_cppext to the failing tests, requires pip.

  [ Stefano Rivera ]
  * Drop python3.12-venv's dependency on python3-setuptools-whl. venv doesn't
    include setuptools in venvs, any more in Python 3.12.